--- a/Web.config
+++ b/Web.config
@@ -56,10 +56,7 @@
       <compiler language="vb;vbs;visualbasic;vbscript" extension=".vb" type="Microsoft.CodeDom.Providers.DotNetCompilerPlatform.VBCodeProvider, Microsoft.CodeDom.Providers.DotNetCompilerPlatform, Version=2.0.1.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" warningLevel="4" compilerOptions="/langversion:default /nowarn:41008 /define:_MYTYPE=\&quot;Web\&quot; /optionInfer+" />
     </compilers>
   </system.codedom>
-  <connectionStrings>
-    <add name="QuanLyNhanSuEntities" connectionString="metadata=res://*/Models.QuanLyNhanSu.csdl|res://*/Models.QuanLyNhanSu.ssdl|res://*/Models.QuanLyNhanSu.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=MINHTHANH\SQLEXPRESS;initial catalog=PROJECT;user id=sa;password=admin;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
-    <add name="ProjectEntities" connectionString="metadata=res://*/Models.GP5_PRO.csdl|res://*/Models.GP5_PRO.ssdl|res://*/Models.GP5_PRO.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=MINHTHANH\SQLEXPRESS;initial catalog=PROJECT;persist security info=True;user id=sa;password=admin;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
-  </connectionStrings>
+  <connectionStrings><add name="QuanLyNhanSuEntities" connectionString="metadata=res://*/Models.QuanLyNhanSu.csdl|res://*/Models.QuanLyNhanSu.ssdl|res://*/Models.QuanLyNhanSu.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=MINHTHANH\SQLEXPRESS;initial catalog=PROJECT;user id=sa;password=admin;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" /><add name="ProjectEntities" connectionString="metadata=res://*/Models.GRP5_CNPMNC.csdl|res://*/Models.GRP5_CNPMNC.ssdl|res://*/Models.GRP5_CNPMNC.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=DESKTOP-A4RPOAT\SQLEXPRESS;initial catalog=PROJECT;user id=sa;password=admin;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.SqlConnectionFactory, EntityFramework" />
     <providers>
